syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.bachelor";
option java_outer_classname = "SignalMessagesProto";
option objc_class_prefix = "HLW";

package bachelor;

service Decrypter {
  // Client subscribes on emailDecryption
  rpc SubscribeMails(stream DecryptRequest) returns(stream DecryptResponse) {}
}

// The request message containing the user's name.
message DecryptRequest {
  bytes encrypted_mail = 1;
}

// The response contains the unecrypted byte stream of an mime mail.
// its a byte stream because its still encrypted with signal.
message DecryptResponse {
  bytes unencrypted_mail = 1;
}
